--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,13 +1,14 @@
 # Brazilian Portuguese translations for xfce4-panel package.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Rodrigo Coacci <rcoacci@gmail.com>, 2004.
+# Adriano Winter Bess <awbess@gmail.com>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.27\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-01-06 15:54-0200\n"
+"POT-Creation-Date: 2006-01-07 12:29+0900\n"
 "PO-Revision-Date: 2006-01-06 16:46-0200\n"
 "Last-Translator: Adriano Winter Bess <awbess@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
