--- a/po/ca.po
+++ b/po/ca.po
@@ -3,20 +3,19 @@
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Carles Muñoz Gorriz <carlesmu@internuatas.org>, 2003-2004.
-# Pau Rullan Ferragut <paurullan@bulma.net>, 2005.
+# Pau Rul·lan Ferragut <paurullan@bulma.net> 2005, 2006
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.27\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-01-07 12:29+0900\n"
-"PO-Revision-Date: 2005-10-29 17:06+0900\n"
+"PO-Revision-Date: 2006-01-08 21:50+0100\n"
 "Last-Translator: Pau Rullan Ferragut <paurullan@bulma.net>\n"
-"Language-Team: Catalan <ca@dodds.net>\n"
+"Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10.2\n"
+"Content-Transfer-Encoding: 8bit"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:177
