--- a/po/pl.po
+++ b/po/pl.po
@@ -4,6 +4,7 @@
 # Paweł Pastuła <pastulap@poczta.onet.pl>, 2003.
 # Daniel Mróz <beorn@alpha.pl>, 2003.
 # Wit Wiliński <madman@berlios.de>, 2005.
+# Piotr Maliński <riklaunim@gmail.com>, 2006.
 #
 msgid ""
 msgstr ""
@@ -11,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-01-07 12:29+0900\n"
 "PO-Revision-Date: 2005-08-17 22:58+0900\n"
-"Last-Translator: Wit Wiliński <madman@berlios.de>\n"
+"Last-Translator: Piotr Maliński <riklaunim@gmail.com>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,10 +22,10 @@ msgstr ""
 #: ../libxfce4panel/xfce-panel-external-item.c:177
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "Obiekt \"%s\" został niespodziewanie usunięty."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:580
-#, fuzzy, c-format
+, c-format
 msgid "Remove \"%s\"?"
 msgstr "Usunąć element %s?"
 
@@ -38,7 +39,7 @@ msgstr "Panel Xfce"
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:585
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
-msgstr ""
+msgstr "Obiekt zostanie usunięty wraz z konfiguracją"
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:740
@@ -47,82 +48,82 @@ msgstr ""
 #: ../plugins/clock/clock.c:408 ../plugins/pager/pager.c:298
 #: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:358
 msgid "Properties"
-msgstr ""
+msgstr "Opcje"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:757
 msgid "About"
-msgstr ""
+msgstr "O obiekcie"
 
 #. move
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:770
-#, fuzzy
+
 msgid "Move"
-msgstr "Usunąć element %s?"
+msgstr "Przesuń"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:792
-#, fuzzy
+
 msgid "Remove"
-msgstr "Usunąć element %s?"
+msgstr "Usuń"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:809
-#, fuzzy
+
 msgid "Add New Item"
 msgstr "Nowy element"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:821 ../panel/panel.c:628
 msgid "Customize Panel"
-msgstr ""
+msgstr "Dopasuj Palej"
 
 #: ../panel/panel.c:639 ../panel/panel-dialogs.c:607
 msgid "Add Items"
-msgstr ""
+msgstr "Dodaj elementy"
 
 #: ../panel/panel.c:654 ../plugins/actions/actions.c:350
 msgid "Quit"
-msgstr ""
+msgstr "Wyjdź"
 
 #: ../panel/panel.c:664
-#, fuzzy
+
 msgid "Restart"
-msgstr "_Restart"
+msgstr "Restart"
 
 #: ../panel/panel.c:678
-#, fuzzy
+
 msgid "About the Xfce Panel"
-msgstr "Panel Xfce"
+msgstr "O Panelu Xfce"
 
 #: ../panel/panel-item-manager.c:357 ../panel/panel-item-manager.c:365
-#, fuzzy, c-format
+, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
 "Błąd uruchomienia \"%s\":\n"
 "%s"
 
 #: ../panel/panel-app.c:211 ../panel/panel-app.c:644
-#, fuzzy
+
 msgid "Exit Xfce Panel?"
 msgstr "Panel Xfce"
 
 #: ../panel/panel-app.c:645
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr ""
+msgstr "Nie możesz usunąć ostatniego panelu, zamknąć program?"
 
 #: ../panel/panel-app.c:672
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "Usunąć Panel \"%d\"?"
 
 #: ../panel/panel-app.c:676
 msgid "The selected panel and all its items will be removed."
-msgstr ""
+msgstr "Panel wraz z elementami zostanie usunięty"
 
 #: ../panel/panel-app.c:715
 msgid "Developer"
-msgstr ""
+msgstr "Twórca"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -148,7 +149,7 @@ msgstr ""
 msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
-msgstr ""
+msgstr "Używanie: %s [OPCJE]\n\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
@@ -164,47 +165,57 @@ msgid ""
 " -a, --add       Add new items\n"
 "\n"
 msgstr ""
+" OPCJE\n"
+" -h, --help      pokazuje ten tekst\n"
+" -v, --version  pokazuje numer wersji\n"
+" -c, --customize pokazuje dane konfiguracyjne\n"
+" -s, --save      zapisuje konfiguracje\n"
+" -r, --restart   restartuje panele\n"
+" -q, --quit     kończy sesję\n"
+" -x, --exit      zamyka panele i kończy program\n"
+" -a, --add       dodaje nowe elementy\n"
+"\n"
 
 #: ../panel/panel-dialogs.c:622
 msgid ""
 "Drag items from the list to a panel or remove them by dragging them back to "
 "the list."
-msgstr ""
+msgstr "Przenieś elementy z listy na panel lub z panelu na listę by je usunąć."
 
 #: ../panel/panel-dialogs.c:635
 msgid "Avalaible Items"
-msgstr ""
+msgstr "Dostępne elementy"
 
 #: ../panel/panel-dialogs.c:875 ../panel/panel-dialogs.c:1092
 msgid "Left"
-msgstr ""
+msgstr "Lewo"
 
 #: ../panel/panel-dialogs.c:877 ../panel/panel-dialogs.c:1094
 msgid "Right"
-msgstr ""
+msgstr "Prawo"
 
 #: ../panel/panel-dialogs.c:882 ../panel/panel-dialogs.c:1099
 msgid "Top"
-msgstr ""
+msgstr "Góra"
 
 #: ../panel/panel-dialogs.c:884 ../panel/panel-dialogs.c:1101
 msgid "Bottom"
-msgstr ""
+msgstr "Dół"
 
 #. floating?
 #: ../panel/panel-dialogs.c:912
-#, fuzzy
+
 msgid "Panel Type"
-msgstr "Rozmiar panelu:"
+msgstr "Tyo panelu:"
 
 #: ../panel/panel-dialogs.c:921
-#, fuzzy
+
 msgid "Fixed Position"
 msgstr "Pozycja"
 
 #: ../panel/panel-dialogs.c:927
 msgid "Freely Moveable"
-msgstr ""
+msgstr "Ruchomy"
 
 #. position
 #: ../panel/panel-dialogs.c:938
@@ -212,17 +223,17 @@ msgid "Position"
 msgstr "Pozycja"
 
 #: ../panel/panel-dialogs.c:1026
-#, fuzzy
+
 msgid "_Full Width"
-msgstr "Szerokość całego ekranu:"
+msgstr "_Pełna długość"
 
 #: ../panel/panel-dialogs.c:1035
-#, fuzzy
+
 msgid "Auto_hide"
 msgstr "Automatyczne ukrywanie"
 
 #: ../panel/panel-dialogs.c:1053
-#, fuzzy
+
 msgid "Orientation:"
 msgstr "Położenie panelu:"
 
@@ -235,18 +246,18 @@ msgid "Vertical"
 msgstr "Pionowe"
 
 #: ../panel/panel-dialogs.c:1076
-#, fuzzy
+
 msgid "Handle:"
-msgstr "Pozycja"
+msgstr "Uchwyt:"
 
 #: ../panel/panel-dialogs.c:1088
 msgid "At both sides"
 msgstr "Na obu brzegach"
 
 #: ../panel/panel-dialogs.c:1161
-#, fuzzy
+
 msgid "Select Monitor"
-msgstr "Edytor"
+msgstr "Wybierz Monitor"
 
 #. size
 #: ../panel/panel-dialogs.c:1274
@@ -275,44 +286,44 @@ msgstr "Pełna"
 
 #: ../panel/panel-dialogs.c:1376 ../panel/panel-dialogs.c:1414
 #: ../panel/panel-dialogs.c:1439
-#, fuzzy, c-format
+, c-format
 msgid "Panel %d"
-msgstr "Panel Xfce"
+msgstr "Panel %d"
 
 #: ../panel/panel-dialogs.c:1460
-#, fuzzy
+
 msgid "Remove Panel"
-msgstr "Usunąć element %s?"
+msgstr "Usunąć Panel"
 
 #: ../panel/panel-dialogs.c:1473
-#, fuzzy
+
 msgid "New Panel"
-msgstr "Panel Xfce"
+msgstr "Nowy Panel"
 
 #: ../panel/panel-dialogs.c:1557
-#, fuzzy
+
 msgid "Panel Manager"
-msgstr "Rozmiar panelu:"
+msgstr "Menadżer Panelu"
 
 #: ../plugins/actions/actions.c:325
-#, fuzzy
+
 msgid "Panel Actions"
 msgstr "Ustawienia panelu"
 
 #: ../plugins/actions/actions.c:342
-#, fuzzy
+
 msgid "Select action type:"
-msgstr "Wybierz polecenie"
+msgstr "Wybierz polecenie:"
 
 #: ../plugins/actions/actions.c:351
-#, fuzzy
+
 msgid "Lock screen"
-msgstr "Zab_lokuj ekran"
+msgstr "Zablokuj ekran"
 
 #: ../plugins/actions/actions.c:352
-#, fuzzy
+
 msgid "Quit + Lock screen"
-msgstr "Zab_lokuj ekran"
+msgstr "Wyjdź i Zablokuj ekran"
 
 #: ../plugins/separator/separator.c:271
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -320,23 +331,23 @@ msgid "Separator"
 msgstr "Separator"
 
 #: ../plugins/separator/separator.c:284
-#, fuzzy
+
 msgid "_Draw Separator"
-msgstr "Separator"
+msgstr "_Separator"
 
 #: ../plugins/separator/separator.c:293
 msgid "_Expand"
-msgstr ""
+msgstr "_Rozciągnij"
 
 #: ../plugins/iconbox/iconbox.c:808
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
 msgid "Icon Box"
-msgstr ""
+msgstr "Boks Ikon"
 
 #: ../plugins/iconbox/iconbox.c:822
-#, fuzzy
+
 msgid "Only show minimized applications"
-msgstr "P_okazuj tylko zminimalizowane aplikacje"
+msgstr "Pokazuj tylko zminimalizowane aplikacje"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -408,7 +419,7 @@ msgstr "Opis"
 
 #: ../plugins/launcher/launcher-dialog.c:522
 msgid "Other..."
-msgstr "Inna..."
+msgstr "Inne..."
 
 #: ../plugins/launcher/launcher-dialog.c:608
 msgid "Command"
@@ -424,7 +435,7 @@ msgstr "Użyj p_owiadomienia o uruchamianiu"
 
 #: ../plugins/launcher/launcher-dialog.c:1121
 #: ../plugins/launcher/launcher.c:584
-#, fuzzy
+
 msgid "New Item"
 msgstr "Nowy element"
 
@@ -437,7 +448,7 @@ msgstr ""
 "pojawią się w menu."
 
 #: ../plugins/launcher/launcher-dialog.c:1288
-#, fuzzy
+
 msgid "Program Launcher"
 msgstr "Aktywator"
 
@@ -446,7 +457,7 @@ msgid "Select file"
 msgstr "Wybierz plik"
 
 #: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
-#, fuzzy, c-format
+, c-format
 msgid "Could not run \"%s\""
 msgstr ""
 "Błąd uruchomienia \"%s\":\n"
@@ -473,9 +484,9 @@ msgid "%A %d %B %Y"
 msgstr "%A, %e %B %Y"
 
 #: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
+
 msgid "Clock"
-msgstr "Zablokuj"
+msgstr "Zegar"
 
 #: ../plugins/clock/clock.c:431
 msgid "Appearance"
@@ -495,31 +506,31 @@ msgid "LED"
 msgstr "LED"
 
 #: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
-#, fuzzy
+
 msgid "Show _frame"
-msgstr "Pokaż ze_gar"
+msgstr "Pokaż _ramkę"
 
 #: ../plugins/clock/clock.c:461
 msgid "Clock Options"
-msgstr ""
+msgstr "Opcję Zegara"
 
 #: ../plugins/clock/clock.c:471
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "Użyj trybu 24-_godzinnego"
 
 #: ../plugins/clock/clock.c:479
-#, fuzzy
+
 msgid "Show AM/PM"
 msgstr "AM/PM"
 
 #: ../plugins/clock/clock.c:487
-#, fuzzy
+
 msgid "Display seconds"
 msgstr "Pokaż zegar przed ikonami"
 
 #: ../plugins/pager/pager.c:314 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
-msgstr ""
+msgstr "Pager"
 
 #: ../plugins/pager/pager.c:334
 msgid "Number of rows:"
@@ -545,7 +556,7 @@ msgstr "Pole statusu"
 
 #: ../plugins/tasklist/tasklist.c:374
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
+
 msgid "Task List"
 msgstr "Lista zadań"
 
@@ -571,19 +582,17 @@ msgstr "Zawsze grupuj zadania"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr ""
+msgstr "Przyciski Akcji"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Log out or lock the screen"
 msgstr "Zablokuj ekran"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "Dodaj spację lub linię pomiędzy elementami panelu"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
 msgstr "P_okazuj tylko zminimalizowane aplikacje"
 
@@ -604,40 +613,39 @@ msgid "Miniature view of all virtual desktops"
 msgstr ""
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
 msgstr "Pokaż ikony powiadomie_nia"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
+
 msgid "Show all running applications"
 msgstr "P_okazuj tylko zminimalizowane aplikacje"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
-msgstr ""
+msgstr "Wtyczka Testowa"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
+msgstr "Ta wtyczka nic nie robi"
 
-#, fuzzy
+
 #~ msgid "Select Panel"
-#~ msgstr "Wybierz plik"
+#~ msgstr "Wybierz Panel"
 
-#, fuzzy
+
 #~ msgid "Panel Properties"
 #~ msgstr "Ustawienia panelu"
 
-#, fuzzy
+
 #~ msgid "Panel"
 #~ msgstr "Panel Xfce"
 
-#, fuzzy
-#~ msgid "Manage Panels"
-#~ msgstr "Panel Xfce"
 
-#, fuzzy
+#~ msgid "Manage Panels"
+#~ msgstr "Zarządzaj Panelami"
+
+
 #~ msgid "Remove %s"
 #~ msgstr "Usunąć element %s?"
 
