Basque translation update
(Old svn revision: 19445)

--- a/po/eu.po
+++ b/po/eu.po
@@ -59,18 +59,16 @@ msgstr "Honi buruz"
 
 #. move
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:770
-#, fuzzy
 msgid "Move"
-msgstr "Kendu"
+msgstr "Mugitu"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:792
 msgid "Remove"
 msgstr "Kendu"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:809
-#, fuzzy
 msgid "Add New Item"
-msgstr "Elementu berria"
+msgstr "Elementu Berria Gehitu"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:821 ../panel/panel.c:628
 msgid "Customize Panel"
@@ -78,7 +76,7 @@ msgstr "Panela Pertsonalizatu"
 
 #: ../panel/panel.c:639 ../panel/panel-dialogs.c:616
 msgid "Add Items"
-msgstr ""
+msgstr "Elemetuak Gehitu"
 
 #: ../panel/panel.c:654 ../plugins/actions/actions.c:350
 msgid "Quit"
@@ -150,7 +148,6 @@ msgstr ""
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
-#, fuzzy
 msgid ""
 " OPTIONS\n"
 " -h, --help      Show this message and exit\n"
@@ -164,14 +161,14 @@ msgid ""
 "\n"
 msgstr ""
 " AUKERAK\n"
-" -h, --help\t  Mezu hau bistarazi eta irten\n"
-" -v, --version\t  Mezu hau bistarazi eta irten\n"
+" -h, --help      Mezu hau bistarazi eta irten\n"
+" -v, --version   Mezu hau bistarazi eta irten\n"
 " -c, --customize Konfigurazio elkarrizketa bistarazi\n"
-" -s, --save \t  Panel konfigurazioa gorde\n"
+" -s, --save      Konfigurazioa gorde\n"
 " -r, --restart   Panelak berrabiarazi\n"
-" -q, --quit      Saio amaitu\n"
-" -x, --exit      Panelak itxi\n"
-" -a, --add       Elementu berria gehitu\n"
+" -q, --quit      Saioa amaitu\n"
+" -x, --exit      Panel guztiak itxi eta programa amaitu\n"
+" -a, --add       Elementu berriak gehitu\n"
 
 #: ../panel/panel-dialogs.c:631
 msgid ""
@@ -240,18 +237,16 @@ msgid "Vertical"
 msgstr "Bertikala"
 
 #: ../panel/panel-dialogs.c:1085
-#, fuzzy
 msgid "Handle:"
-msgstr "Kokalekua Kudeatu:"
+msgstr "Kudeatu:"
 
 #: ../panel/panel-dialogs.c:1097
 msgid "At both sides"
 msgstr "Bi alboetan"
 
 #: ../panel/panel-dialogs.c:1170
-#, fuzzy
 msgid "Select Monitor"
-msgstr "Monitorea"
+msgstr "Monitorea Aukeratu"
 
 #. size
 #: ../panel/panel-dialogs.c:1283 ../plugins/tasklist/tasklist.c:426
@@ -293,9 +288,8 @@ msgid "New Panel"
 msgstr "Panel Berria"
 
 #: ../panel/panel-dialogs.c:1566
-#, fuzzy
 msgid "Panel Manager"
-msgstr "Panel mota:"
+msgstr "Panel Kudeatzailea:"
 
 #: ../plugins/actions/actions.c:325
 msgid "Panel Actions"
@@ -539,12 +533,11 @@ msgstr "Zeregin zerrenda"
 
 #: ../plugins/tasklist/tasklist.c:434
 msgid "Width:"
-msgstr ""
+msgstr "Zabalera:"
 
 #: ../plugins/tasklist/tasklist.c:447
-#, fuzzy
 msgid "Expand"
-msgstr "_Zabaldu"
+msgstr "Zabaldu"
 
 #: ../plugins/tasklist/tasklist.c:463
 msgid "Show tasks from _all workspaces"
@@ -568,7 +561,7 @@ msgstr "Beti _taldekatu lanak"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr ""
+msgstr "Ekintza Botoiak"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
 msgid "Log out or lock the screen"
