--- a/po/de.po
+++ b/po/de.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Moritz Heiber <moe@xfce.org>, 2003-2005.
-# Fabian Nowak <timystery@arcor.de>, 2005.
+# Fabian Nowak <timystery@arcor.de>, 2005, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.27\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-01-15 10:32+0100\n"
-"PO-Revision-Date: 2005-10-08 07:16+0900\n"
+"POT-Creation-Date: 2006-01-24 23:58+0900\n"
+"PO-Revision-Date: 2006-01-23 10:34+0100\n"
 "Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -20,7 +20,7 @@ msgstr ""
 #: ../libxfce4panel/xfce-panel-external-item.c:177
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr "Ein Item wurde unerwartet entfernt: \"%s\"."
+msgstr "Ein Element wurde unerwartet entfernt: \"%s\"."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:580
 #, c-format
@@ -29,7 +29,7 @@ msgstr "Entferne \"%s\"?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:583 ../panel/panel-app.c:642
 #: ../panel/panel-app.c:674 ../panel/panel-app.c:707
-#: ../panel/panel-dialogs.c:593 ../panel/panel-dialogs.c:1541
+#: ../panel/panel-dialogs.c:593 ../panel/panel-dialogs.c:1588
 #: ../plugins/launcher/launcher.c:320 ../plugins/launcher/launcher.c:369
 msgid "Xfce Panel"
 msgstr "Xfce Panel"
@@ -38,45 +38,43 @@ msgstr "Xfce Panel"
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
-"Das Item wird vom Panel entfernt und seine Einstellungen gehen verloren."
+"Das Element wird aus der Leiste entfernt und seine Einstellungen gehen "
+"verloren."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:740
 #: ../plugins/actions/actions.c:309 ../plugins/separator/separator.c:255
-#: ../plugins/iconbox/iconbox.c:792 ../plugins/launcher/launcher-dialog.c:1275
+#: ../plugins/iconbox/iconbox.c:792 ../plugins/launcher/launcher-dialog.c:1285
 #: ../plugins/clock/clock.c:408 ../plugins/pager/pager.c:298
-#: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:393
+#: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:398
 msgid "Properties"
-msgstr ""
+msgstr "Eigenschaften"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:757
 msgid "About"
-msgstr ""
+msgstr "Über"
 
 #. move
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:770
-#, fuzzy
 msgid "Move"
-msgstr "Item entfernen"
+msgstr "Verschieben"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:792
-#, fuzzy
 msgid "Remove"
-msgstr "Item entfernen"
+msgstr "Entfernen"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:809
-#, fuzzy
 msgid "Add New Item"
-msgstr "Neues Item"
+msgstr "Neues Objekt hinzufügen"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:821 ../panel/panel.c:628
 msgid "Customize Panel"
-msgstr ""
+msgstr "Leiste einrichten"
 
 #: ../panel/panel.c:639 ../panel/panel-dialogs.c:616
 msgid "Add Items"
-msgstr ""
+msgstr "Objekte hinzufügen"
 
 #: ../panel/panel.c:654 ../plugins/actions/actions.c:350
 msgid "Quit"
@@ -88,7 +86,7 @@ msgstr "Neu starten"
 
 #: ../panel/panel.c:678
 msgid "About the Xfce Panel"
-msgstr "Über Xfce Panel"
+msgstr "Über die Xfce Leiste"
 
 #: ../panel/panel-item-manager.c:357 ../panel/panel-item-manager.c:365
 #, c-format
@@ -97,28 +95,29 @@ msgstr "Konnte Modul \"%s\" nicht öffnen."
 
 #: ../panel/panel-app.c:211 ../panel/panel-app.c:644
 msgid "Exit Xfce Panel?"
-msgstr "Xfce Panel beenden?"
+msgstr "Xfce Leiste beenden?"
 
 #: ../panel/panel-app.c:645
 msgid "You can't remove the last panel. Would you like to exit the program?"
 msgstr ""
-"Das letze Panel kann nicht entfernt werden. Soll das Programm beendet werden?"
+"Die letze Leiste kann nicht entfernt werden. Soll das Programm beendet "
+"werden?"
 
 #: ../panel/panel-app.c:672
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr "Panel \"%d\" entfernen?"
+msgstr "Leiste \"%d\" entfernen?"
 
 #: ../panel/panel-app.c:676
 msgid "The selected panel and all its items will be removed."
-msgstr ""
+msgstr "Die ausgewqählte Leiste und ihre gesamter Inhalt werden entfernt."
 
 #: ../panel/panel-app.c:715
 msgid "Developer"
 msgstr "Entwickler"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -130,13 +129,13 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-"Das Xfce Panel\n"
-"Version %s\n"
+"Die Xfce Leiste %s\n"
 "\n"
 "Teil der Xfce Desktop Umgebung\n"
 "http://www.xfce.org\n"
 "\n"
 "Lizensiert unter GNU GPL.\n"
+"\n"
 
 #: ../panel/main.c:52
 #, c-format
@@ -144,10 +143,11 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+" Verwendung: %s [OPTIONEN]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
-#, fuzzy
 msgid ""
 " OPTIONS\n"
 " -h, --help      Show this message and exit\n"
@@ -165,145 +165,149 @@ msgstr ""
 " -v, --version   Die Version anzeigen und beenden\n"
 " -c, --customize Einstellungen anzeigen\n"
 " -s, --save      Einstellungen speichern\n"
-" -r, --restart   Panels neu starten\n"
+" -r, --restart   Leisten neu starten\n"
 " -q, --quit      Sitzung beenden\n"
-" -x, --exit      Panels verlassen\n"
-" -a, --add       Neue Items hinzufügen\n"
+" -x, --exit      Leisten schließen und das Programm beenden\n"
+" -a, --add       Neue Objekte zur Leiste hinzufügen\n"
 "\n"
 
 #: ../panel/panel-dialogs.c:631
-#, fuzzy
 msgid ""
 "Drag items from the list to a panel or remove them by dragging them back to "
 "the list."
 msgstr ""
-"Items von der Liste auf das Panel ziehen oder vorhandene Items an einen "
-"neuen Ort verschieben."
+"Einträge von der Liste auf die Leiste ziehen oder von der Leiste zurück auf "
+"die Liste."
 
 #: ../panel/panel-dialogs.c:644
 msgid "Avalaible Items"
-msgstr "Verfügbare Items"
+msgstr "Verfügbare Erweiterungen"
 
-#: ../panel/panel-dialogs.c:884 ../panel/panel-dialogs.c:1101
+#: ../panel/panel-dialogs.c:852 ../panel/panel-dialogs.c:1075
+msgid "Normal Width"
+msgstr "Normale Breite"
+
+#: ../panel/panel-dialogs.c:854 ../panel/panel-dialogs.c:1077
+#, fuzzy
+msgid "Full Width"
+msgstr "Volle Breite"
+
+#: ../panel/panel-dialogs.c:860 ../panel/panel-dialogs.c:1083
+msgid "Span Monitors"
+msgstr "Monitore umfassen"
+
+#: ../panel/panel-dialogs.c:920 ../panel/panel-dialogs.c:1148
 msgid "Left"
-msgstr ""
+msgstr "Links"
 
-#: ../panel/panel-dialogs.c:886 ../panel/panel-dialogs.c:1103
+#: ../panel/panel-dialogs.c:922 ../panel/panel-dialogs.c:1150
 msgid "Right"
-msgstr ""
+msgstr "Rechts"
 
-#: ../panel/panel-dialogs.c:891 ../panel/panel-dialogs.c:1108
+#: ../panel/panel-dialogs.c:927 ../panel/panel-dialogs.c:1155
 msgid "Top"
-msgstr ""
+msgstr "Oben"
 
-#: ../panel/panel-dialogs.c:893 ../panel/panel-dialogs.c:1110
+#: ../panel/panel-dialogs.c:929 ../panel/panel-dialogs.c:1157
 msgid "Bottom"
-msgstr ""
+msgstr "Unten"
 
 #. floating?
-#: ../panel/panel-dialogs.c:921
+#: ../panel/panel-dialogs.c:957
 msgid "Panel Type"
-msgstr "Paneltyp"
+msgstr "Verankerung der Leiste"
 
-#: ../panel/panel-dialogs.c:930
+#: ../panel/panel-dialogs.c:966
 msgid "Fixed Position"
 msgstr "Feste Position"
 
-#: ../panel/panel-dialogs.c:936
+#: ../panel/panel-dialogs.c:972
 msgid "Freely Moveable"
 msgstr "Frei bewegbar"
 
 #. position
-#: ../panel/panel-dialogs.c:947
+#: ../panel/panel-dialogs.c:983
 msgid "Position"
 msgstr "Position"
 
-#: ../panel/panel-dialogs.c:1035
-msgid "_Full Width"
-msgstr "_Volle Breite"
-
-#: ../panel/panel-dialogs.c:1044
+#: ../panel/panel-dialogs.c:1091
 msgid "Auto_hide"
-msgstr "Aus_blenden"
+msgstr "Automatisch aus_blenden"
 
-#: ../panel/panel-dialogs.c:1062
+#: ../panel/panel-dialogs.c:1109
 msgid "Orientation:"
 msgstr "Ausrichtung:"
 
-#: ../panel/panel-dialogs.c:1074
+#: ../panel/panel-dialogs.c:1121
 msgid "Horizontal"
 msgstr "Horizontal"
 
-#: ../panel/panel-dialogs.c:1076
+#: ../panel/panel-dialogs.c:1123
 msgid "Vertical"
 msgstr "Vertikal"
 
-#: ../panel/panel-dialogs.c:1085
-#, fuzzy
+#: ../panel/panel-dialogs.c:1132
 msgid "Handle:"
-msgstr "Feste Position"
+msgstr "Position:"
 
-#: ../panel/panel-dialogs.c:1097
+#: ../panel/panel-dialogs.c:1144
 msgid "At both sides"
 msgstr "An beiden Seiten"
 
-#: ../panel/panel-dialogs.c:1170
-#, fuzzy
+#: ../panel/panel-dialogs.c:1217
 msgid "Select Monitor"
-msgstr "Monitor"
+msgstr "Monitor auswählen"
 
 #. size
-#: ../panel/panel-dialogs.c:1283 ../plugins/tasklist/tasklist.c:426
+#: ../panel/panel-dialogs.c:1330 ../plugins/tasklist/tasklist.c:431
 msgid "Size"
 msgstr "Größe"
 
-#: ../panel/panel-dialogs.c:1291
+#: ../panel/panel-dialogs.c:1338
 msgid "Small"
 msgstr "Klein"
 
-#: ../panel/panel-dialogs.c:1304
+#: ../panel/panel-dialogs.c:1351
 msgid "Large"
 msgstr "Groß"
 
-#: ../panel/panel-dialogs.c:1319
+#: ../panel/panel-dialogs.c:1366
 msgid "Transparency"
 msgstr "Durchsichtigkeit"
 
-#: ../panel/panel-dialogs.c:1327
+#: ../panel/panel-dialogs.c:1374
 msgid "None"
 msgstr "Keines"
 
-#: ../panel/panel-dialogs.c:1341
+#: ../panel/panel-dialogs.c:1388
 msgid "Full"
 msgstr "voll"
 
-#: ../panel/panel-dialogs.c:1385 ../panel/panel-dialogs.c:1423
-#: ../panel/panel-dialogs.c:1448
-#, fuzzy, c-format
+#: ../panel/panel-dialogs.c:1432 ../panel/panel-dialogs.c:1470
+#: ../panel/panel-dialogs.c:1495
+#, c-format
 msgid "Panel %d"
-msgstr "Neues Panel"
+msgstr "Leiste %d"
 
-#: ../panel/panel-dialogs.c:1469
-#, fuzzy
+#: ../panel/panel-dialogs.c:1516
 msgid "Remove Panel"
-msgstr "Dieses Panel entfernen"
+msgstr "Leiste entfernen"
 
-#: ../panel/panel-dialogs.c:1482
+#: ../panel/panel-dialogs.c:1529
 msgid "New Panel"
-msgstr "Neues Panel"
+msgstr "Neue Leiste"
 
-#: ../panel/panel-dialogs.c:1566
-#, fuzzy
+#: ../panel/panel-dialogs.c:1613
 msgid "Panel Manager"
-msgstr "Paneltyp"
+msgstr "Verwaltung der Leisten"
 
 #: ../plugins/actions/actions.c:325
 msgid "Panel Actions"
-msgstr "Panel-Aktionen"
+msgstr "Leisten-Aktionen"
 
 #: ../plugins/actions/actions.c:342
 msgid "Select action type:"
-msgstr "Aktion auswählen"
+msgstr "Aktion auswählen:"
 
 #: ../plugins/actions/actions.c:351
 msgid "Lock screen"
@@ -349,7 +353,7 @@ msgstr "Dateimanagement"
 
 #: ../plugins/launcher/launcher-dialog.c:81
 msgid "Utilities"
-msgstr "Utilities"
+msgstr "Dienstprogramme"
 
 #: ../plugins/launcher/launcher-dialog.c:82
 msgid "Games"
@@ -393,7 +397,7 @@ msgstr "Bild auswählen"
 
 #: ../plugins/launcher/launcher-dialog.c:426
 msgid "Select command"
-msgstr "Kommando auswählen"
+msgstr "Befehl auswählen"
 
 #: ../plugins/launcher/launcher-dialog.c:449
 msgid "Name"
@@ -420,24 +424,23 @@ msgid "Use _startup notification"
 msgstr "Benutze _Startup Notifikation"
 
 #: ../plugins/launcher/launcher-dialog.c:1121
-#: ../plugins/launcher/launcher.c:584
+#: ../plugins/launcher/launcher.c:578
 msgid "New Item"
-msgstr "Neues Item"
+msgstr "Neuer Eintrag"
 
-#: ../plugins/launcher/launcher-dialog.c:1233
+#: ../plugins/launcher/launcher-dialog.c:1243
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
 msgstr ""
-"Das erste Item der Liste wird im Panel angezeigt. Zusätzliche Items "
-"erscheinen in einem Menü."
+"Der erste Eintrag der Liste wird in der Leiste angezeigt. Zusätzliche "
+"Einträge erscheinen in einem Menü."
 
-#: ../plugins/launcher/launcher-dialog.c:1288
-#, fuzzy
+#: ../plugins/launcher/launcher-dialog.c:1298
 msgid "Program Launcher"
-msgstr "Starter einstellen"
+msgstr "Programmstarter"
 
-#: ../plugins/launcher/launcher-dialog.c:1623
+#: ../plugins/launcher/launcher-dialog.c:1633
 msgid "Select file"
 msgstr "Datei auswählen"
 
@@ -446,13 +449,13 @@ msgstr "Datei auswählen"
 msgid "Could not run \"%s\""
 msgstr "Konnte \"%s\" nicht ausführen."
 
-#: ../plugins/launcher/launcher.c:637 ../plugins/launcher/launcher.c:1164
+#: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
 msgid "This item has not yet been configured"
-msgstr "Dieses Item hat keine Optionen"
+msgstr "Diese Eintrag wurde noch nicht bearbeitet"
 
-#: ../plugins/launcher/launcher.c:1163
+#: ../plugins/launcher/launcher.c:1157
 msgid "New item"
-msgstr "Neues Item"
+msgstr "Neuer Eintrag"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -464,7 +467,7 @@ msgstr "Neues Item"
 #.
 #: ../plugins/clock/clock.c:109
 msgid "%A %d %B %Y"
-msgstr "%A %d %B %Y"
+msgstr "%A, %d. %B %Y"
 
 #: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
 msgid "Clock"
@@ -533,43 +536,42 @@ msgstr "Konnte Systemtray nicht registrieren: %s"
 msgid "Status Area"
 msgstr "Statusfeld"
 
-#: ../plugins/tasklist/tasklist.c:409 ../plugins/tasklist/tasklist.c:459
+#: ../plugins/tasklist/tasklist.c:414 ../plugins/tasklist/tasklist.c:467
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
 msgid "Task List"
 msgstr "Taskliste"
 
-#: ../plugins/tasklist/tasklist.c:434
-msgid "Width:"
-msgstr ""
+#: ../plugins/tasklist/tasklist.c:439
+msgid "Minimum Width:"
+msgstr "Minimale Breite:"
 
-#: ../plugins/tasklist/tasklist.c:447
-#, fuzzy
-msgid "Expand"
-msgstr "_Ausdehnen"
+#: ../plugins/tasklist/tasklist.c:454
+msgid "Use all available space"
+msgstr "Gesamten verfügbaren Platz verwenden"
 
-#: ../plugins/tasklist/tasklist.c:463
+#: ../plugins/tasklist/tasklist.c:471
 msgid "Show tasks from _all workspaces"
 msgstr "Sämtliche Tasks _anzeigen"
 
-#: ../plugins/tasklist/tasklist.c:473
+#: ../plugins/tasklist/tasklist.c:481
 msgid "Show application _names"
-msgstr "Programmnamen _anzeigen"
+msgstr "Programmnamen a_nzeigen"
 
-#: ../plugins/tasklist/tasklist.c:487
+#: ../plugins/tasklist/tasklist.c:495
 msgid "Never group tasks"
 msgstr "Tasks nie gruppieren"
 
-#: ../plugins/tasklist/tasklist.c:490
+#: ../plugins/tasklist/tasklist.c:498
 msgid "Automatically group tasks"
 msgstr "Tasks automatisch gruppieren"
 
-#: ../plugins/tasklist/tasklist.c:493
+#: ../plugins/tasklist/tasklist.c:501
 msgid "Always group tasks"
 msgstr "Tasks immer gruppieren"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr ""
+msgstr "Aktive Knöpfe"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
 msgid "Log out or lock the screen"
@@ -577,7 +579,8 @@ msgstr "Abmelden oder Desktop sperren"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr "Fügt zusätzlichen Freiraum oder eine Linie zwischen Panel-Items"
+msgstr ""
+"Fügt zusätzlichen Freiraum oder eine Linie zwischen Leistenelementen ein"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
@@ -614,35 +617,3 @@ msgstr "Plugin testen"
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
 msgstr "Dieses Plugin hat keinen Nutzen"
-
-#, fuzzy
-#~ msgid "Select Panel"
-#~ msgstr "Zum ausgewählten Panel hinzufügen"
-
-#, fuzzy
-#~ msgid "Panel Properties"
-#~ msgstr "Panel-Eigenschaften"
-
-#~ msgid "Manage Panel Items"
-#~ msgstr "Panel-Items verwalten"
-
-#~ msgid "Add To Selected Panel"
-#~ msgstr "Zum ausgewählten Panel hinzufügen"
-
-#~ msgid "Panel Preferences"
-#~ msgstr "Panel-Eigenschaften"
-
-#, fuzzy
-#~ msgid "Panel"
-#~ msgstr "Neues Panel"
-
-#, fuzzy
-#~ msgid "Manage Panels"
-#~ msgstr "Panel-Items verwalten"
-
-#, fuzzy
-#~ msgid "Remove %s"
-#~ msgstr "Entferne \"%s\"?"
-
-#~ msgid "Are you sure you want to exit?"
-#~ msgstr "Sind Sie sicher, dass Sie Xfce beenden wollen?"
